更新 panelJ的传递